--- a/siteVeiculos/src/app/app.component.html
+++ b/siteVeiculos/src/app/app.component.html
@@ -1,1 +1,8 @@
 <router-outlet></router-outlet>
+<div class="container">
+    <app-menu></app-menu>
+  </div>
+  <div class="container bg-success">
+    <router-outlet></router-outlet>
+  </div>
+  
