--- a/siteVeiculos/src/app/components/home/home.component.html
+++ b/siteVeiculos/src/app/components/home/home.component.html
@@ -1,17 +1,3 @@
-<div class="container bg-info">
-    <h1>MEU SITE DE VEÍCULOS</h1>
-</div>
-<div>
-    <ul>
-        <li><a href="">Página 1</a></li>
-        <li><a href="">Página 2</a></li>
-        <li><a href="">Página 3</a></li>
-        <li><a href="">Página 4</a></li>
-        <li><a href="">Página 5</a></li>
-        <li><a href="">Página 6</a></li>
-        <li><a href="">Página 7</a></li>
-        <li><a href="">Página 8</a></li>
-        <li><a href="">Página 9</a></li>
-        <li><a href="">Página 10</a></li>
-    </ul>
-</div>
+<h1 class="text-center">
+    Minas Motors
+</h1>
